--- a/app/src/main/res/layout/drinks_fragment.xml
+++ b/app/src/main/res/layout/drinks_fragment.xml
@@ -411,7 +411,7 @@
         <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             ads:adSize="BANNER"
