--- a/app/src/main/res/layout/history_fragment.xml
+++ b/app/src/main/res/layout/history_fragment.xml
@@ -58,6 +58,10 @@
             app:layout_constraintTop_toBottomOf="@id/drunkChart"
             app:layout_constraintVertical_weight="0.4">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/drinkRecycleView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
