--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -167,6 +167,7 @@
             android:text="@string/info_text"
             android:textAlignment="center"
             android:textColor="@color/reply_black_900"
+            android:layout_margin="@dimen/activity_horizontal_margin"
             app:layout_constraintBottom_toTopOf="@id/water_seek_bar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
