--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="notification_container_margin">10dp</dimen>
     <dimen name="medium_level_margin_8dp">8dp</dimen>
     <dimen name="small_level_margin_4dp">4dp</dimen>
+    <dimen name="drinks_button_height_width">70dp</dimen>
+    <dimen name="drinks_button_text_size">12sp</dimen>
 </resources>
