migration to Room is completed except for 3 function and delete selected drink in recycler view bug is fixed

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_navigation_home_to_navigation_setting"
             app:destination="@id/navigation_setting" />
+        <action
+            android:id="@+id/action_navigation_home_self"
+            app:destination="@+id/navigation_home" />
     </fragment>
 
     <fragment
